--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-8">
-            <h1 class="mt-2">Django People</h1>
+            <h1 class="mt-2">Student Advisement</h1>
             <hr class="mt-0 mb-4">
             {% block content %}
                 <form method="post">
